# aegis-alpha

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.hermes/: env.example
.launchd/: com.aegis-alpha.runner.plist.template
config/: candidate_grading.yaml  dragon_tiger_seats.yaml  event_scoring.yaml  jvquant_capability_probes.json  p6_thresholds.yaml  runner.yaml
docs/: AGENT_EVALUATION.md  AI_INTEGRATION.md  ARCHITECTURE.md  HERMES.md  JVQUANT_CAPABILITY_MATRIX.md  JVQUANT_FIELD_MAP.md  JVQUANT_OFFICIAL_INDEX.md  MVP_PILOT_RUNBOOK.md  PLAN.md  PROVIDERS.md
scripts/: batch_agent_historical_eval.py  check_agent_reviews.py  check_hermes_integration.sh  check_hermes_provider.sh  check_realtime_snapshots.py  check_runner_status.sh  daily_radar.py  demo_copilot.py  expand_realtime_subscription.py  install_all.sh  install_hermes.sh  install_hermes_all.sh  install_hermes_mcp_config.sh  install_hermes_mvp_automation.sh  install_hermes_project_config.sh  install_hermes_provider_config.sh  install_hermes_skill.sh  install_jvquant.sh  install_launchd_runner.sh  market_observer_pass.py  mvp_pilot.py  probe_jvquant_fields.py  probe_jvquant_websocket_payload.py  probe_tdx.py  realtime_health_check.py  replay_orderbook_fixture.py  run_mcp.py  smoke_agent_historical_snapshot.py  smoke_agent_replay.py  smoke_check.py  smoke_jvquant_readonly.py  smoke_jvquant_realtime.py  switch_hermes_model.sh  test_tdx_candidates.py  uninstall_launchd_runner.sh
tests/: test_agent_factor_contract.py  test_agent_observation_grade.py  test_alerts.py  (+95 more)
(+167 files in other folders)
