[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aegis-alpha"
version = "0.1.0"
description = "Hermes-powered A-share trading research and watchlist assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp-slim[server]==3.3.1",
    "pydantic==2.13.4",
    "PyYAML>=6.0.2,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]
jvquant = [
    "jvquant==1.20.5",
    "requests>=2.32.0,<3.0.0",
    "websocket-client>=1.8.0,<2.0.0",
]
market-data = [
    "jvquant==1.20.5",
    "requests>=2.32.0,<3.0.0",
    "websocket-client>=1.8.0,<2.0.0",
]
history-store = [
    "pyarrow>=15.0.0,<20.0.0",
    "duckdb>=0.10.0,<2.0.0",
]

[project.scripts]
aegis-alpha-mcp = "aegis_alpha.mcp.server:main"
aegis-alpha-runner = "aegis_alpha.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_alpha"]

[tool.pytest.ini_options]
pythonpath = ["src"]
